@@ -3,8 +3,9 @@
 
 from .tools     import *
 from .parse     import *
+from .paramedit import *
 
-__all__ = tools.__all__ + parse.__all__
+__all__ = tools.__all__ + parse.__all__ + paramedit.__all__
 
 # Clean up top-level namespace--delete everything that isn't in __all__
 # or is a magic attribute, and that isn't a submodule of this package
